
2004/08/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- very much simplified GWEN_TIME: It now mostly uses <time.h> functions
  and a local version of mktime (to make the time from UTC time instead
  of local time). This leaves only one function which the OS layer has to 
  provide.
- decreased debugging level in GWEN_DB_ReadFromStream


2004/08/16: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added GWEN_Time_fromUtcString()


2004-08-16   Christian Stimming <stimming@tuhh.de>

	* src/os/windows/gwentime.c (GWEN_Time_new): Remove errornous
	extra variable declaration.


2004/08/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions to get the time/date as UTC time
- added functions to set/get a GWEN_TIME from/to a GWEN_DB
- moved common code from various os-dependant gwentime.c files to 
  gwentime_all.c.


===========================================================================
MARK: released gwenhywfar-0.9.14 (2004/08/11)
===========================================================================


2004/08/10: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- removed "-lpanel -lncurses" from all_libraries
- fixed network code (netconnection, nettransportssl etc)
- base/plugindescr: added function 
   GWEN_PluginDescription_GetLongDescrByFormat() to retrieve HTML and other
   formats of descriptions.


2004/08/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- did the same with the list templates...


2004-08-09   Christian Stimming <stimming@tuhh.de>

	* src/base/list2.h, list.h: Modify the ForEach function
	declaration so that is takes an additional void* argument that can
	be used to pass data into the callback.

	* src/base/misc.h, list2.h: Introduce GWEN_LIST_FUNCTION_LIB_DEFS
	macros that accept a third argument to specify the