@@ -139,7 +139,7 @@ extern "C" {
    * @ref GWEN_INHERIT_SETDATA instead.
    */
 #define GWEN_INHERIT_FUNCTION_DEFS(t) \
-  GWEN_INHERIT_FUNCTION_LIB_DEFS(t, )
+  GWEN_INHERIT_FUNCTION_LIB_DEFS(t, GWEN_DUMMY_EMPTY_ARG)
 
   /*@}*/
 
